work for the https://github.com/surveyjs/service/issues/1486

--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -244,6 +244,10 @@
 }
 
 .sv-ranking--select-to-rank-horizontal {
+  .sv-ranking__container {
+    max-width: calc(50% - 1px);
+  }
+
   .sv-ranking__containers-divider {
     width: 1px;
   }
