Work for #7019: fix question's margins and paddings

--- a/src/defaultV2-theme/blocks/sd-action.scss
+++ b/src/defaultV2-theme/blocks/sd-action.scss
@@ -67,7 +67,11 @@ svg.sd-action--icon {
   &.sd-action--negative {
     background-color: $red-light;
 
-    &.sd-action--icon {}
+    &.sd-action--icon {
+      use {
+        fill: $red;
+      }
+    }
   }
 
   &:active {
