--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -3,6 +3,8 @@
 
 @import "blocks/sd-element.scss";
 @import "blocks/sd-question.scss";
+@import "blocks/sd-collapsed-element.scss";
+@import "blocks/sd-complex-element.scss";
 @import "blocks/sd-input.scss";
 @import "blocks/sd-comment.scss";
 @import "blocks/sd-panel.scss";
