--- a/src/defaultV2-theme/blocks/sd-paneldynamic.scss
+++ b/src/defaultV2-theme/blocks/sd-paneldynamic.scss
@@ -259,3 +259,7 @@
 .sd-paneldynamic__header.sd-element__header.sd-paneldynamic__header-tab::after {
     bottom: 0;
 }
+
+.sd-question--paneldynamic.sd-element--with-frame {
+    padding-bottom: 0;
+}
