resolve #7097 Martix column and row title should be affected with font-width property.

--- a/src/defaultV2-theme/blocks/sd-matrix.scss
+++ b/src/defaultV2-theme/blocks/sd-matrix.scss
@@ -18,6 +18,6 @@
   padding: calcSize(2);
 }
 .sd-matrix__cell:first-of-type {
-  font-weight: 600;
+  font-weight: $font-questiontitle-weight;
   text-align: left;
 }
