--- a/src/defaultV2-theme/blocks/sd-action.scss
+++ b/src/defaultV2-theme/blocks/sd-action.scss
@@ -2,6 +2,7 @@
   appearance: none;
   border: none;
   display: flex;
+  align-items: center;
   gap: calcSize(1);
   background: transparent;
   padding: calcSize(1) calcSize(3);
