--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -105,19 +105,19 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  color: $foreground;
+  color: $font-questiontitle-color;
   font-size: $font-editorfont-size;
   line-height: multiply(1.5, $font-editorfont-size);
   margin: 0 calcSize(2);
 }
 
 .sd-ranking--disabled .sv-ranking-item__text {
-  color: $foreground;
+  color: $font-questiontitle-color;
   opacity: 0.25;
 }
 
 .sv-ranking-item--disabled .sv-ranking-item__text {
-  color: $foreground;
+  color: $font-questiontitle-color;
   opacity: 0.25;
 }
 
