--- a/src/defaultV2-theme/blocks/sd-item.scss
+++ b/src/defaultV2-theme/blocks/sd-item.scss
@@ -42,7 +42,7 @@
   font-weight: $font-editorfont-weight;
   line-height: multiply(1.5, $font-editorfont-size);
   font-size: $font-editorfont-size;
-  color: $font-editorfont-color;
+  color: $font-questiontitle-color;
   white-space: normal;
   word-break: break-word;
   width: 100%;
@@ -50,12 +50,12 @@
 }
 
 .sd-item--disabled .sd-item__control-label {
-  color: $foreground;
+  color: $font-questiontitle-color;
   opacity: 0.25;
 }
 
 .sd-root--readonly .sd-item--disabled .sd-item__control-label {
-  color: $foreground;
+  color: $font-questiontitle-color;
 }
 
 .sd-item--error .sd-item__decorator {
