--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -36,6 +36,7 @@
   font-family: var(--font-family, $font-family);
   font-size: calcFontSize(1);
 }
+
 .sd-dropdown input[readonly] {
   pointer-events: none;
 }
@@ -51,7 +52,7 @@
   font-weight: $font-editorfont-weight;
   color: $font-editorfont-color;
   font-size: $font-editorfont-size;
-  
+
   position: relative;
 }
 
@@ -61,7 +62,7 @@
   align-items: center;
   padding: 0 calcSize(1);
   margin: auto 0;
-  }
+}
 
 .sd-dropdown_chevron-button {
   position: absolute;
@@ -79,7 +80,7 @@
 .sd-dropdown_clean-button-svg {
   width: multiply(1.5, $font-editorfont-size);
   height: multiply(1.5, $font-editorfont-size);
-  }
+}
 
 .sd-input.sd-dropdown:focus-within {
   box-shadow: 0 0 0 2px $primary;
@@ -131,7 +132,7 @@
 
 .sd-dropdown__hint-prefix {
   color: $font-editorfont-placeholdercolor;
-  
+
   span {
     white-space: pre;
   }
@@ -151,7 +152,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.sv-popup.sv-popup--dropdown.sv-popup--dropdown {
+
+.sv-dropdown-popup {
   .sd-list__item-body {
     line-height: multiply(1.5, $font-editorfont-size);
     font-size: $font-editorfont-size;
