--- a/src/defaultV2-theme/blocks/sd-list.scss
+++ b/src/defaultV2-theme/blocks/sd-list.scss
@@ -3,15 +3,15 @@
   padding-left: calcSize(0.5);
 }
 
-.sd-list__item.sd-list__item {
+.sd-list__item {
   padding: 0;
+}
 
-  .sd-list__item-body {
-    padding-block: calcSize(1.5);
-    border-radius: calcCornerRadius(1);
-    font-size: calcFontSize(1);
-    line-height: calcLineHeight(1.5);
-  }
+.sd-list__item-body {
+  padding-block: calcSize(1.5);
+  border-radius: calcCornerRadius(1);
+  font-size: calcFontSize(1);
+  line-height: calcLineHeight(1.5);
 }
 
 .sd-list__item.sd-list__item--focused:not(.sd-list__item--selected) {
