--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -81,7 +81,7 @@
   align-items: center;
   justify-content: center;
   background-color: $primary-light;
-  color: $foreground;
+  color: $font-questiontitle-color;
   font-size: calcFontSize(1);
   border-radius: 100%;
   border: calcSize(0.25) solid transparent;
