--- a/src/defaultV2-theme/blocks/sd-action.scss
+++ b/src/defaultV2-theme/blocks/sd-action.scss
@@ -38,12 +38,12 @@
   }
 
   use {
-    fill: $foreground-light;
+    fill: $font-questiondescription-color;
   }
 }
 
 svg.sd-action--icon {
-  fill: $foreground-light;
+  fill: $font-questiondescription-color;
 }
 
 .sd-action:disabled,
