--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -332,7 +332,7 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
     margin-top: calcSize(1.25);
     margin-bottom: calcSize(1.25);
     border: 2px solid transparent;
-    color: $foreground-light;
+    color: $font-questiondescription-color;
   }
 
   &.sd-rating__min-text {
