Work for #6876 - Mobile: issues with matrices - fixed top padding

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -426,6 +426,7 @@
   .sd-table__cell.sd-matrix__cell {
     display: flex;
     align-items: flex-start;
+    border-top: none;
     border-bottom: none;
 
     .sd-matrix__responsive-title {
@@ -450,8 +451,8 @@
   }
 
   .sd-matrix__table {
-    tr+tr {
-      margin-top: calcSize(1);
+    .sd-table__row {
+      padding-top: calcSize(1);
     }
   }
 
