--- a/src/defaultV2-theme/blocks/sd-boolean.scss
+++ b/src/defaultV2-theme/blocks/sd-boolean.scss
@@ -19,7 +19,7 @@
   font-family: $font-editorfont-family;
   font-weight: $font-editorfont-weight;
   font-size: $font-editorfont-size;
-  color: $foreground-light;
+  color: $font-editorfont-placeholdercolor;
   line-height: multiply(1.5, $font-editorfont-size);
   padding: calcSize(1) calcSize(3);
 }
