--- a/src/defaultV2-theme/blocks/sd-multipletext.scss
+++ b/src/defaultV2-theme/blocks/sd-multipletext.scss
@@ -58,7 +58,7 @@
   border-right: 1px solid $border;
   word-break: break-word;
   white-space: normal;
-  color: $foreground-light;
+  color: $font-editorfont-placeholdercolor;
 }
 
 .sd-multipletext__item {
