--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -40,51 +40,55 @@
 .sd-table--no-header {
   padding-top: calcSize(3);
 }
-
-.sd-panel__content {
-  .sd-table--no-header {
-    padding-top: 0;
-  }
-
-  .sd-question--table {
-    .sd-question__content {
-      padding-top: calcSize(0);
+.sd-panel:not(.sd-panel--as-page) {
+  &>.sd-panel__content {
+    .sd-table--no-header {
+      padding-top: 0;
     }
 
-    &>.sd-question__header {
-      &+.sd-question__content {
-        padding-top: calcSize(2);
+    .sd-question--table {
+      .sd-question__content {
+        padding-bottom: calcSize(0.25);
+        margin-bottom: calcSize(-0.25);
+        padding-top: calcSize(1);
+        margin-top: calcSize(-1);
+      }
 
-        .sd-table--no-header {
-          padding-top: calcSize(4);
+      &>.sd-question__header {
+        &+.sd-question__content {
+          padding-top: calcSize(2);
+
+          .sd-table--no-header {
+            padding-top: calcSize(4);
+          }
         }
       }
     }
-  }
 
 
-  .sd-question--table>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
-    margin-top: calcSize(-3);
-  }
+    .sd-question--table>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+      margin-top: calcSize(-3);
+    }
 
-  .sd-question--table.sd-question--error-top>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
-    margin-top: 0;
-  }
+    .sd-question--table.sd-question--error-top>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+      margin-top: 0;
+    }
 
-  &>.sd-row:not(:first-of-type) .sd-question--table>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
-    margin-top: calcSize(-2);
-  }
+    &>.sd-row:not(:first-of-type) .sd-question--table>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+      margin-top: calcSize(-2);
+    }
 
-  &>.sd-row:not(:first-of-type) .sd-question--table.sd-question--error-top>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
-    margin-top: calcSize(0);
-  }
+    &>.sd-row:not(:first-of-type) .sd-question--table.sd-question--error-top>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+      margin-top: calcSize(0);
+    }
 
-  .sd-question--table>.sd-question__header+.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
-    margin-top: calcSize(1);
-  }
+    .sd-question--table>.sd-question__header+.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+      margin-top: calcSize(1);
+    }
 
-  &>.sd-row:not(:first-of-type) .sd-question--table>.sd-question__header+.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
-    margin-top: calcSize(1);
+    &>.sd-row:not(:first-of-type) .sd-question--table>.sd-question__header+.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+      margin-top: calcSize(1);
+    }
   }
 }
 
@@ -383,13 +387,6 @@
     &>.sd-question__content {
       min-width: auto;
       overflow-x: auto;
-    }
-
-    &>.sd-question__content {
-      padding-bottom: calcSize(0.25);
-      margin-bottom: calcSize(-0.25);
-      padding-top: calcSize(1);
-      margin-top: calcSize(-1);
     }
   }
 
