Bug/6876 mobile matrix issues (#7129)
* Fixed #6876 - Mobile: issues with matrices

* Work for #6876 - Mobile: issues with matrices

* Work for #6876 - Mobile: issues with matrices - fixed top padding

* Work for #6876 - Mobile: issues with matrices - updated etalons

---------

Co-authored-by: tsv2013 <tsv2013@noreply.github.com>

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -423,6 +423,8 @@
   .sd-table__cell.sd-matrix__cell {
     display: flex;
     align-items: flex-start;
+    border-top: none;
+    border-bottom: none;
 
     .sd-matrix__responsive-title {
       margin-left: calcSize(1);
@@ -446,8 +448,8 @@
   }
 
   .sd-matrix__table {
-    tr+tr {
-      margin-top: calcSize(1);
+    .sd-table__row {
+      padding-top: calcSize(1);
     }
   }
 
@@ -588,6 +590,14 @@
 .sd-table__question-wrapper {
   .sd-boolean-root {
     margin: auto;
+  }
+}
+
+.sd-root-modern--mobile {
+  .sd-table__question-wrapper {
+    .sd-boolean-root {
+      margin: initial;
+    }
   }
 }
 
