Fix toc navigation popup

--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -146,7 +146,7 @@ sv-popup {
     width: 100%;
   }
 
-  .sv-popup__button {
+  .sv-popup__button.sv-popup__button {
     background-color: $primary;
     border: 2px solid $primary;
     color: $primary-foreground;
