--- a/src/defaultV2-theme/variables.scss
+++ b/src/defaultV2-theme/variables.scss
@@ -184,7 +184,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
 
 @mixin articleXXLargeFont {
   color: $font-questiontitle-color;
-  font-size: var(--sjs-article-font-xx-large-fontSize, 64px);
+  font-size: var(--sjs-article-font-xx-large-fontSize, calc(4 * (#{$font-size})));
   text-decoration: var(--sjs-article-font-xx-large-textDecoration, "none");
   font-family: $font-family;
   font-weight: var(--sjs-article-font-xx-large-fontWeight, 700);
@@ -198,7 +198,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
 
 @mixin articleXLargeFont {
   color: $font-questiontitle-color;
-  font-size: var(--sjs-article-font-x-large-fontSize, 48px);
+  font-size: var(--sjs-article-font-x-large-fontSize, calc(3 * (#{$font-size})));
   text-decoration: var(--sjs-article-font-x-large-textDecoration, "none");
   font-family: $font-family;
   font-weight: var(--sjs-article-font-x-large-fontWeight, 700);
@@ -212,7 +212,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
 
 @mixin articleLargeFont {
   color: $font-questiontitle-color;
-  font-size: var(--sjs-article-font-large-fontSize, 32px);
+  font-size: var(--sjs-article-font-large-fontSize, calc(2 * (#{$font-size})));
   text-decoration: var(--sjs-article-font-large-textDecoration, "none");
   font-family: $font-family;
   font-weight: var(--sjs-article-font-large-fontWeight, 700);
@@ -226,7 +226,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
 
 @mixin articleMediumFont {
   color: $font-questiontitle-color;
-  font-size: var(--sjs-article-font-medium-fontSize, 24px);
+  font-size: var(--sjs-article-font-medium-fontSize, calc(1.5 * (#{$font-size})));
   text-decoration: var(--sjs-article-font-medium-textDecoration, "none");
   font-family: $font-family;
   font-weight: var(--sjs-article-font-medium-fontWeight, 700);
@@ -240,7 +240,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
 
 @mixin articleDefaultFont {
   color: $font-questiontitle-color;
-  font-size: var(--sjs-article-font-default-fontSize, 16px);
+  font-size: var(--sjs-article-font-default-fontSize, #{$font-size});
   text-decoration: var(--sjs-article-font-default-textDecoration, "none");
   font-family: $font-family;
   font-weight: var(--sjs-article-font-default-fontWeight, 400);
