--- a/src/defaultV2-theme/blocks/mixins.scss
+++ b/src/defaultV2-theme/blocks/mixins.scss
@@ -6,7 +6,7 @@
   color: $font-pagetitle-color;
   position: static;
   line-height: multiply(1.33, var(--page-title-font-size));
-  margin: calcSize(0.5) 0px;
+  margin: 0 0 calcSize(0.5) 0px;
 }
 
 @mixin cover_title {
