forecolor from advanced settings (#7136)
* work for #7099 set question title font variable

* work for #7099 set question description font variable

* work for #7099 set editor placeholdercolor font color variable

* work for #7099 fix colors

* work for #7099 update etalons

---------

Co-authored-by: OlgaLarina <olga.larina.dev@gmail.com>

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -268,7 +268,7 @@
     display: block;
     width: multiply(1, $font-editorfont-size);
     height: multiply(1, $font-editorfont-size);
-    fill: $foreground-light;
+    fill: $font-questiondescription-color;
   }
 
   &:hover {
