--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -48,7 +48,7 @@ sv-popup {
   max-width: 100vw;
 }
 
-.sv-popup.sv-popup--modal {
+.sv-popup--modal {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -85,7 +85,8 @@ sv-popup {
     font-size: calcFontSize(1);
     font-style: normal;
     font-weight: 400;
-    line-height: calcLineHeight(1.5);/* 150% */
+    line-height: calcLineHeight(1.5);
+    /* 150% */
   }
 
   .sv-popup__scrolling-content {
@@ -101,11 +102,11 @@ sv-popup {
   }
 }
 
-.sv-popup.sv-popup--modal>.sv-popup__container {
+.sv-popup--modal>.sv-popup__container {
   position: static;
 }
 
-.sv-popup--overlay.sv-popup--overlay {
+.sv-popup--overlay {
   width: 100%;
   height: $popup-overlay-height;
 
@@ -145,14 +146,14 @@ sv-popup {
     width: 100%;
   }
 
-  .sv-popup__button {
+  .sv-popup__button.sv-popup__button {
     background-color: $primary;
     border: 2px solid $primary;
     color: $primary-foreground;
   }
 }
 
-.sv-popup--overlay.sv-popup--overlay:not(.sv-dropdown-popup) {
+.sv-popup--overlay {
   .sv-popup__body-footer .sv-action {
     flex: 1 0 0;
   }
@@ -269,8 +270,51 @@ sv-popup {
   }
 }
 
+.sv-popup--dropdown {
+  .sv-list__filter {
+    margin-bottom: calcSize(1);
+  }
+
+  .sv-popup__shadow {
+    box-shadow: $shadow-medium;
+  }
+
+  .sv-popup__body-content {
+    background-color: $background;
+    padding: calcSize(1) 0;
+    height: 100%;
+  }
+}
+
+.sv-dropdown-popup {
+  .sv-popup__body-content {
+    padding: calcSize(0.5) 0;
+  }
+
+  .sv-list__filter {
+    margin-bottom: 0;
+  }
+}
+
+.sv-popup--modal {
+  .sv-popup__body-content {
+    box-shadow: $shadow-large;
+    background-color: $background-dim-light;
+  }
+
+  .sv-popup__body-footer {
+    padding-bottom: 2px;
+  }
+}
+
+.sv-popup--overlay {
+  .sv-popup__body-content {
+    background-color: $background-dim;
+  }
+}
+
 //styles for dropdown overlay
-.sv-dropdown-popup.sv-popup--overlay {
+.sv-popup--dropdown-overlay {
   z-index: 2001;
   padding: 0;
 
@@ -281,16 +325,16 @@ sv-popup {
 
   .sv-popup__body-footer .sv-action-bar {
     .sv-action {
-      width: auto;
+      flex: 0 0 auto;
     }
   }
 
-  .sv-popup__button {
+  .sv-popup__button.sv-popup__button {
     background-color: transparent;
     color: $primary;
     border: none;
     box-shadow: none;
-    padding: calcSize(1) calcSize(2);
+    padding: calcSize(0.5) calcSize(2);
     border-radius: calcSize(12.5);
     margin: 0;
   }
@@ -306,10 +350,10 @@ sv-popup {
   }
 
   .sv-popup__body-footer {
-    background-color: $background-dim-light;
+    background-color: $background-dim;
     margin-top: 0;
-    padding-top: calcSize(0.5);
-    padding-bottom: calcSize(0.5);
+    padding-top: calcSize(1);
+    padding-bottom: calcSize(1);
     border-top: 1px solid $border-light;
   }
 
@@ -318,8 +362,8 @@ sv-popup {
   }
 
   .sv-list__filter-icon .sv-svg-icon {
-    width: calcSize(2);
-    height: calcSize(2);
+    width: calcSize(3);
+    height: calcSize(3);
   }
 
   .sv-list__container {
@@ -328,19 +372,19 @@ sv-popup {
 
   .sv-list {
     flex-grow: 1;
-    padding: calcSize(0.5);
+    padding: calcSize(1) 0;
   }
 
   .sv-list__filter {
     display: flex;
     align-items: center;
-    padding: calcSize(0.5) calcSize(1) calcSize(0.5) calcSize(2.5);
+    margin-bottom: 0;
+    padding: calcSize(1.5) calcSize(1) calcSize(1.5) calcSize(2);
   }
 
   .sv-list__filter-icon {
     position: static;
-    top: calcSize(1.5);
-    height: calcSize(2);
+    height: calcSize(3);
   }
 
   .sv-list__empty-container {
@@ -382,7 +426,7 @@ sv-popup {
     font-size: calcFontSize(1);
     line-height: calcLineHeight(1.5);
     font-family: $font-family;
-    padding: calcSize(0.5) 0 calcSize(0.5) calcSize(1);
+    padding: calcSize(0.5) 0 calcSize(0.5) calcSize(2);
   }
 
   .sv-list__item:hover,
@@ -400,9 +444,46 @@ sv-popup {
       }
     }
   }
+
+  .sv-popup__body-footer .sv-action-bar {
+    justify-content: flex-start;
+  }
 }
 
-.sv-dropdown-popup.sv-popup--overlay.sv-multi-select-list {
+.sv-dropdown-popup.sv-popup--dropdown-overlay {
+  .sv-list__filter {
+    padding: calcSize(0.5) calcSize(1) calcSize(0.5) calcSize(2.5);
+  }
+
+  .sv-list {
+    padding: calcSize(0.5);
+  }
+
+  .sv-popup__button.sv-popup__button {
+    padding: calcSize(1) calcSize(2.5);
+  }
+
+  .sv-popup__body-footer {
+    padding-top: calcSize(0.5);
+    padding-bottom: calcSize(0.5);
+    background-color: $background-dim-light;
+  }
+
+  .sv-list__filter-icon .sv-svg-icon {
+    width: calcSize(2);
+    height: calcSize(2);
+  }
+
+  .sv-list__filter-icon {
+    height: calcSize(2);
+  }
+
+  .sv-list__input {
+    padding: calcSize(0.5) 0 calcSize(0.5) calcSize(1);
+  }
+}
+
+.sv-popup--dropdown-overlay.sv-multi-select-list {
 
   .sv-list__item:hover,
   .sv-list__item:focus,
@@ -418,7 +499,7 @@ sv-popup {
 }
 
 
-.sv-dropdown-popup.sv-popup--overlay.sv-popup--tablet {
+.sv-popup--dropdown-overlay.sv-popup--tablet {
   .sv-popup__body-content {
     --sv-popup-overlay-max-height: calc(var(--sv-popup-overlay-height, 100vh) - #{$base-unit} * 8);
     --sv-popup-overlay-max-width: calc(100% - #{$base-unit} * 8);
@@ -427,7 +508,7 @@ sv-popup {
     left: 50%;
     top: 50%;
     max-height: var(--sv-popup-overlay-max-height);
-    min-height: min(var(--sv-popup-overlay-max-height), calcSize(31));
+    min-height: min(var(--sv-popup-overlay-max-height), calcSize(30));
     height: auto;
     width: auto;
     min-width: min(calcSize(40), var(--sv-popup-overlay-max-width));
