--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -254,7 +254,7 @@
 
   .sv-ranking__container--to {
     .sv-ranking-item {
-      left: calcSize(1);
+      left: calcSize(2);
     }
   }
 
@@ -290,6 +290,8 @@
   align-items: center;
   //width: 100%;
   height: 100%;
+  padding-top: calcSize(0.5);
+  padding-bottom: calcSize(0.5);
 }
 
 .sv-ranking__container {
