--- a/src/defaultV2-theme/blocks/cover.scss
+++ b/src/defaultV2-theme/blocks/cover.scss
@@ -3,6 +3,10 @@
   background-color: $cover-backcolor;
 }
 
+.sv-cover--mobile {
+  padding: calcSize(3);
+}
+
 .sv-conver__overlap {
   margin-bottom: calcSize(-14);
   padding-bottom: calcSize(8);
@@ -97,15 +101,15 @@
   font-weight: $font-surveytitle-weight;
 }
 
-.sv-cover__logo ~ .sv-cover__title {
+.sv-cover__logo~.sv-cover__title {
   margin-top: calcSize(4);
 }
 
-.sv-cover__logo ~ .sv-cover__description {
+.sv-cover__logo~.sv-cover__description {
   margin-top: calcSize(4);
 }
 
-.sv-cover__title ~ .sv-cover__description {
+.sv-cover__title~.sv-cover__description {
   margin-top: calcSize(1);
 }
 
@@ -117,6 +121,7 @@
   margin: 0;
   color: $cover-description-forecolor;
 }
+
 .sv-conver__content .sd-header__text h3 {
   margin: 0;
 }
