--- a/src/knockout/components/header/index.html
+++ b/src/knockout/components/header/index.html
@@ -6,7 +6,7 @@
   <!-- ko ifnot: survey.isMobile -->
   <div data-bind="css: model.contentClasses, style: { maxWidth: model.maxWidth }">
   <!-- ko foreach: model.cells -->
-    <!-- ko component: { name: 'sv-cover-cell', params: { model: $data } } -->
+    <!-- ko component: { name: 'sv-header-cell', params: { model: $data } } -->
     <!-- /ko -->
   <!--/ko-->
   </div>
