Work for #7181 - Cover mobile view - added VR-test

--- a/src/knockout/components/header/index.html
+++ b/src/knockout/components/header/index.html
@@ -12,7 +12,7 @@
   </div>
   <!--/ko-->
   <!-- ko if: survey.isMobile -->
-    <!-- ko component: { name: 'sv-header-mobile', params: { model: survey } } -->
+    <!-- ko component: { name: 'sv-header-mobile', params: { model: model } } -->
     <!-- /ko -->
   <!--/ko-->
   </div>
