--- a/src/knockout/components/header/mobile.html
+++ b/src/knockout/components/header/mobile.html
@@ -1,20 +1,20 @@
 <div class="sv-header--mobile">
-  <!-- ko if: hasLogo -->
+  <!-- ko if: survey.hasLogo -->
   <div class="sv-header__logo">
-  <!-- ko component: { name: getElementWrapperComponentName($data, 'logo-image'), params: getElementWrapperComponentData($data, 'logo-image') } -->
+  <!-- ko component: { name: survey.getElementWrapperComponentName(survey, 'logo-image'), params: survey.getElementWrapperComponentData(survey, 'logo-image') } -->
   <!-- /ko -->
   </div>
   <!-- /ko -->
-  <!-- ko if: hasTitle -->
-  <div class="sv-header__title" data-bind="style: { maxWidth: header.textAreaWidth }">
-  <!-- ko component: { name: 'survey-element-title', params: { element: $data } } -->
+  <!-- ko if: survey.hasTitle -->
+  <div class="sv-header__title" data-bind="style: { maxWidth: textAreaWidth }">
+  <!-- ko component: { name: 'survey-element-title', params: { element: survey } } -->
   <!-- /ko -->
   </div>
   <!-- /ko -->
-  <!-- ko if: renderedHasDescription -->
-  <div class="sv-header__description" data-bind="style: { maxWidth: header.textAreaWidth }">
-    <h5 data-bind="css: css.description">
-      <!-- ko template: { name: 'survey-string', data: $data.locDescription } -->
+  <!-- ko if: survey.renderedHasDescription -->
+  <div class="sv-header__description" data-bind="style: { maxWidth: textAreaWidth }">
+    <h5 data-bind="css: survey.css.description">
+      <!-- ko template: { name: 'survey-string', data: survey.locDescription } -->
       <!-- /ko -->
     </h5>
   </div>
