--- a/packages/survey-angular-ui/src/components/header/header-mobile.component.html
+++ b/packages/survey-angular-ui/src/components/header/header-mobile.component.html
@@ -1,16 +1,16 @@
 
 <ng-template #template>
   <div class="sv-header--mobile">
-    <div *ngIf="model.hasLogo" class="sv-header__logo">
-      <div [class]="model.logoClassNames">
-        <ng-template [component]="{ name: model.getElementWrapperComponentName(model, 'logo-image'), data: { data: model.getElementWrapperComponentData(model, 'logo-image') } }"></ng-template>
+    <div *ngIf="model.survey.hasLogo" class="sv-header__logo">
+      <div [class]="model.survey.logoClassNames">
+        <ng-template [component]="{ name: model.survey.getElementWrapperComponentName(model.survey, 'logo-image'), data: { data: model.survey.getElementWrapperComponentData(model.survey, 'logo-image') } }"></ng-template>
       </div>
     </div>
-    <div *ngIf="model.hasTitle" class="sv-header__title" [style]="{ maxWidth: model['header'].textAreaWidth }">
+    <div *ngIf="model.survey.hasTitle" class="sv-header__title" [style]="{ maxWidth: model.textAreaWidth }">
       <sv-ng-element-title [element]="model.survey"></sv-ng-element-title>
     </div>
-    <div *ngIf="model.renderedHasDescription" class="sv-header__description" [style]="{ maxWidth: model['header'].textAreaWidth }">
-      <h5 *ngIf="model.renderedHasDescription" [class]="model.css.description" [model]="model.locDescription" sv-ng-string></h5>
+    <div *ngIf="model.survey.renderedHasDescription" class="sv-header__description" [style]="{ maxWidth: model.textAreaWidth }">
+      <h5 *ngIf="model.survey.renderedHasDescription" [class]="model.survey.css.description" [model]="model.survey.locDescription" sv-ng-string></h5>
     </div>
   </div>
 </ng-template>
