--- a/packages/survey-angular-ui/src/components/header/header.component.html
+++ b/packages/survey-angular-ui/src/components/header/header.component.html
@@ -7,7 +7,7 @@
       </ng-container>
     </div>
     <div *ngIf="survey.isMobile">
-      <sv-ng-header-mobile [model]="survey"></sv-ng-header-mobile>
+      <sv-ng-header-mobile [model]="model"></sv-ng-header-mobile>
     </div>
   </div>
 </ng-template>
