--- a/packages/survey-angular-ui/src/components/header/header.component.html
+++ b/packages/survey-angular-ui/src/components/header/header.component.html
@@ -1,10 +1,13 @@
 <ng-template #template>
   <div *ngIf="(survey.headerView === 'advanced' && survey.renderedHasHeader)" [class]="model.coverClasses" [style]="{ height: model.renderedHeight }">
     <div *ngIf="!!model.backgroundImage" [style]="model.backgroundImageStyle" [class]="model.backgroundImageClasses"></div>
-    <div [class]="model.contentClasses" [style.width]="model.maxWidth">
+    <div *ngIf="!survey.isMobile" [class]="model.contentClasses" [style.width]="model.maxWidth">
       <ng-container *ngFor="let cell of model.cells">
-        <sv-ng-cover-cell [model]="cell"></sv-ng-cover-cell>
+        <sv-ng-header-cell [model]="cell"></sv-ng-header-cell>
       </ng-container>
+    </div>
+    <div *ngIf="survey.isMobile">
+      <sv-ng-header-mobile [model]="model"></sv-ng-header-mobile>
     </div>
   </div>
 </ng-template>
