Fields are not on a one line Fixed https://github.com/surveyjs/service/issues/1538

--- a/src/defaultV2-theme/blocks/sd-question.scss
+++ b/src/defaultV2-theme/blocks/sd-question.scss
@@ -157,6 +157,6 @@
 .sd-question__title--empty {
   .sv-string-viewer {
     display: inline-block;
-    height: calcSize(3);
+    height: multiply(1.5, $font-questiontitle-size);
   }
 }
