--- a/src/knockout/components/header/index.html
+++ b/src/knockout/components/header/index.html
@@ -1,5 +1,5 @@
 <!-- ko if: (survey.headerView === 'advanced' && survey.renderedHasHeader) -->
-<div data-bind="css: model.coverClasses, style: { height: model.renderedHeight }">
+<div data-bind="css: model.headerClasses, style: { height: model.renderedHeight }">
   <!-- ko if: !!model.backgroundImage -->
   <div data-bind="style: model.backgroundImageStyle, css: model.backgroundImageClasses"></div>
   <!-- /ko -->
