Work for #7181 - Advanced header mobile view - Returned lost texts

--- a/src/defaultV2-theme/blocks/header.scss
+++ b/src/defaultV2-theme/blocks/header.scss
@@ -128,6 +128,8 @@
 
 .sv-header--mobile {
   padding: calcSize(3);
+  position: relative;
+  z-index: 1;
 
   .sv-header__logo~.sv-header__title {
     margin-top: calcSize(3);
