Work for #7181 - Advanced header mobile view - fixed image width

--- a/src/defaultV2-theme/blocks/header.scss
+++ b/src/defaultV2-theme/blocks/header.scss
@@ -134,4 +134,8 @@
   .sv-header__logo~.sv-header__title {
     margin-top: calcSize(3);
   }
+
+  .sv-header__logo img {
+    max-width: 100%;
+  }
 }
