--- a/src/defaultV2-theme/blocks/sd-title.scss
+++ b/src/defaultV2-theme/blocks/sd-title.scss
@@ -46,11 +46,10 @@
   }
 
   .sd-description {
+    @include survey_description;
     color: $font-surveydescription-color;
     font-family: $font-surveydescription-family;
     font-weight: $font-surveydescription-weight;
-    font-size: $font-surveydescription-size;
-    line-height: multiply(1.5, (var(--sjs-font-size, 16px)));
   }
 }
 
