Fixed https://github.com/surveyjs/private-tasks/issues/316 - cover remarks 2

--- a/src/defaultV2-theme/blocks/header.scss
+++ b/src/defaultV2-theme/blocks/header.scss
@@ -76,6 +76,8 @@
 .sv-header__cell--center {
   .sv-header__cell-content {
     min-width: 100%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
@@ -87,6 +89,10 @@
 
 .sv-header__logo {
   display: flex;
+
+  img {
+    display: block;
+  }
 }
 
 .sv-header__title {
