fix list item styles  https://github.com/surveyjs/private-tasks/issues/316 - cover remarks 2

--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -157,6 +157,8 @@
   .sd-list__item-body {
     line-height: multiply(1.5, $font-editorfont-size);
     font-size: $font-editorfont-size;
+    font-weight: $font-editorfont-weight;
+    font-family: $font-editorfont-family;
   }
 }
 
