--- a/src/defaultV2-theme/blocks/mixins.scss
+++ b/src/defaultV2-theme/blocks/mixins.scss
@@ -9,10 +9,28 @@
   margin: 0 0 calcSize(0.5) 0px;
 }
 
-@mixin cover_title {
-  --cover-title-font-size: var(--sjs-font-surveytitle-size, calc(2 * (var(--sjs-font-size, 16px))));
-  font-size: var(--cover-title-font-size);
-  line-height: multiply(1.25, var(--cover-title-font-size));
+@mixin survey_title {
+  --survey-title-font-size: var(--sjs-font-surveytitle-size, calc(2 * (var(--sjs-font-size, 16px))));
+  font-size: var(--survey-title-font-size);
+  line-height: multiply(1.25, var(--survey-title-font-size));
+}
+
+@mixin survey_description {
+  --survey-description-font-size: var(--sjs-font-surveydescription-size, var(--sjs-font-size, 16px));
+  font-size: var(--survey-description-font-size);
+  line-height: multiply(1.5, var(--survey-description-font-size));
+}
+
+@mixin header_title {
+  --header-title-font-size: var(--sjs-font-headertitle-size, calc(2 * (var(--sjs-font-size, 16px))));
+  font-size: var(--header-title-font-size);
+  line-height: multiply(1.25, var(--header-title-font-size));
+}
+
+@mixin header_description {
+  --header-description-font-size: var(--sjs-font-headerdescription-size, var(--sjs-font-size, 16px));
+  font-size: var(--header-description-font-size);
+  line-height: multiply(1.5, var(--header-description-font-size));
 }
 
 @mixin page_description {
