--- a/src/defaultV2-theme/blocks/sd-title.scss
+++ b/src/defaultV2-theme/blocks/sd-title.scss
@@ -29,8 +29,8 @@
   flex-grow: 1;
 
   .sd-title {
-    @include cover_title;
-    color: $primary;
+    @include survey_title;
+    color: $font-surveytitle-color;
     font-family: $font-surveytitle-family;
     font-weight: $font-surveytitle-weight;
   }
@@ -43,6 +43,13 @@
     font-size: calcFontSize(1);
     font-weight: 400;
     line-height: calcLineHeight(1.5);
+  }
+
+  .sd-description {
+    @include survey_description;
+    color: $font-surveydescription-color;
+    font-family: $font-surveydescription-family;
+    font-weight: $font-surveydescription-weight;
   }
 }
 
